# think

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Engine/include/: Engine.h
Engine/include/core/: Component.h  Entity.h  InputSystem.h  RenderWindow.h  Resource.h  ResourceManager.h  Scene.h  SceneManager.h  ServiceLocator.h
Engine/include/core/components/: EntityRenderer.h  TextureRenderer.h  Transform2D.h
Engine/include/core/components/camera/: OrthographicCamera2d.h
Engine/include/core/resources/: Texture.h
Engine/include/utils/: UDebug.h  UMath.h  UShader.h  UTime.h
Engine/src/: Engine.cpp  main.cpp
Engine/src/core/: Component.cpp  Entity.cpp  InputSystem.cpp  RenderWindow.cpp  Resource.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  ServiceLocator.cpp
Engine/src/core/components/: EntityRenderer.cpp  TextureRenderer.cpp  Transform2D.cpp
Engine/src/core/components/camera/: OrthographicCamera2d.cpp
Engine/src/core/resources/: Texture.cpp
cmake_modules/: FindSDL2_image.cmake
game/: Game.cpp  Game.h
game/private/components/: PlayerInput.cpp
game/private/entities/: Rocket.cpp
game/public/components/: PlayerInput.h
game/public/entities/: Rocket.h
include/: Game.h  RenderWindow.h  think-lib.h
include/core/: Component.h  Entity.h  EntityManager.h  Game.h  RenderWindow.h  Resource.h  ResourceManager.h  ServiceLocator.h  Transform.h
include/core/components/: EntityRenderer.h  Transform.h
include/core/resources/: Texture.h
include/entities/: Entity.h  Planet.h  Rocket.h
include/game/entities/: Rocket.h
include/utils/: Math.h  Transform.h  UMath.h  UTime.h  think-lib.h
res/shaders/: texture_shader.frag  texture_shader.vert
src/: Game.cpp  RenderWindow.cpp  main.cpp
src/core/: Component.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  RenderWindow.cpp  ResourceManager.cpp  ServiceLocator.cpp
src/core/components/: EntityRenderer.cpp
src/core/resources/: Texture.cpp
src/entities/: Planet.cpp  Rocket.cpp
src/game/entities/: Rocket.cpp
